<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="about_text">This application is developed by Nabto to demonstrate the Nabto Tunneling functionality, which enables applications to open a secure P2P connection to a remote or local device. \n\nThe app supports external links and QR code in the following format: nabtovideo://nabto.com/?version=1&amp;name=[NAME]&amp;type=[TYPE]&amp;port=[PORT]&amp;url=[URL] \n\nVisit http://nabto.com/ for more information.\n\n</string>
    <string name="action_about">About</string>
    <string name="action_add">Add Device</string>
    <string name="action_edit">Edit</string>
    <string name="action_qr">Scan QR</string>
    <string name="action_remove">Remove</string>
    <string name="action_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="add_bookmark_text">Add Bookmark</string>
    <string name="back_button">Back</string>
    <string name="bookmark_button">Bookmark</string>
    <string name="bookmark_cancel_button">Cancel</string>
    <string name="bookmark_list_button">Bookmark List</string>
    <string name="bookmark_save_button">Save</string>
    <string name="bookmark_title_hint">Enter Bookmark Title</string>
    <string name="bookmark_title_text">Bookmark</string>
    <string name="bookmark_url_hint">Enter URL to Bookmark</string>
    <string name="bookmark_url_text">URL</string>
    <string name="bookmarks_text">Bookmarks</string>
    <string name="change_credentials_button">Log Out</string>
    <string name="crittercism_id"></string>
    <string name="device_details">Device Details</string>
    <string name="forward_button">Forward</string>
    <string name="hello_world">Hello world!</string>
    <string name="http_auth">Basic Authentication</string>
    <string name="http_cancel">Cancel</string>
    <string name="http_ok">Done</string>
    <string name="http_password">Password</string>
    <string name="http_username">Username</string>
    <string name="list_empty">No Devices</string>
    <string name="login_auto">Auto Login</string>
    <string name="login_create_button">Sign up for account</string>
    <string name="login_email">Email</string>
    <string name="login_forgot_button">Forgot password</string>
    <string name="login_guest_button">Guest login</string>
    <string name="login_h1">Log In</string>
    <string name="login_login_button">Log in</string>
    <string name="login_password">Password</string>
    <string name="login_text">Logging in&#8230;</string>
    <string name="mpeg_description">Uses an FFMPEG player to show video streams</string>
    <string name="name_placeholder">Name</string>
    <string name="port_placeholder">Port</string>
    <string name="qr_scan">Scan QR Code</string>
    <string name="refresh_button_description">Refresh Button</string>
    <string name="set_as_home_page_button">Set Home Page</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_add_device">Add Device</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_web_view">Web Video</string>
    <string name="title_placeholder">Title [optional]</string>
    <string name="toggle_url_bar_button">Toggle URL Bar</string>
    <string name="url_input_text">URL Input</string>
    <string name="url_placeholder">Url</string>
    <string name="video_completion_details">The connection was lost</string>
    <string name="video_error">Video Error</string>
    <string name="video_error_details">No connection or invalid path</string>
    <string name="video_player_type">Video Player Type</string>
    <string name="web_description">Uses a web view to show mjpeg feeds or web interface</string>
</resources>
